--- a/apps/frontend-wte/project.json
+++ b/apps/frontend-wte/project.json
@@ -1,23 +1,23 @@
 {
-  "name": "frontend",
+  "name": "frontend-wte",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "prefix": "app",
-  "sourceRoot": "apps/frontend/src",
+  "sourceRoot": "apps/frontend-wte/src",
   "tags": [],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/frontend",
-        "index": "apps/frontend/src/index.html",
-        "browser": "apps/frontend/src/main.ts",
+        "outputPath": "dist/apps/frontend-wte",
+        "index": "apps/frontend-wte/src/index.html",
+        "browser": "apps/frontend-wte/src/main.ts",
         "polyfills": ["zone.js"],
-        "tsConfig": "apps/frontend/tsconfig.app.json",
+        "tsConfig": "apps/frontend-wte/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["apps/frontend/src/favicon.ico", "apps/frontend/src/assets"],
-        "styles": ["apps/frontend/src/styles.scss"],
+        "assets": ["apps/frontend-wte/src/favicon.ico", "apps/frontend-wte/src/assets"],
+        "styles": ["apps/frontend-wte/src/styles.scss"],
         "scripts": []
       },
       "configurations": {
@@ -48,10 +48,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "frontend:build:production"
+          "buildTarget": "frontend-wte:build:production"
         },
         "development": {
-          "buildTarget": "frontend:build:development"
+          "buildTarget": "frontend-wte:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -59,7 +59,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "frontend:build"
+        "buildTarget": "frontend-wte:build"
       }
     },
     "lint": {
@@ -69,7 +69,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/frontend/jest.config.ts"
+        "jestConfig": "apps/frontend-wte/jest.config.ts"
       }
     }
   }
