Set port of frontend-wte to 3001

--- a/apps/frontend-wte/project.json
+++ b/apps/frontend-wte/project.json
@@ -51,7 +51,8 @@
           "buildTarget": "frontend-wte:build:production"
         },
         "development": {
-          "buildTarget": "frontend-wte:build:development"
+          "buildTarget": "frontend-wte:build:development",
+          "port": 3001
         }
       },
       "defaultConfiguration": "development"
