--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@angular/platform-browser": "17.3.0",
     "@angular/platform-browser-dynamic": "17.3.0",
     "@angular/router": "17.3.0",
-    "@nx/angular": "18.3.4",
     "rxjs": "7.8.0",
     "tslib": "2.3.0",
     "zone.js": "0.14.3"
@@ -31,10 +30,13 @@
     "@angular/cli": "17.3.0",
     "@angular/compiler-cli": "17.3.0",
     "@angular/language-service": "17.3.0",
+    "@nestjs/schematics": "10.0.1",
+    "@nx/angular": "18.3.4",
     "@nx/eslint": "18.3.4",
     "@nx/eslint-plugin": "18.3.4",
     "@nx/jest": "18.3.4",
     "@nx/js": "18.3.4",
+    "@nx/nest": "18.3.4",
     "@nx/workspace": "18.3.4",
     "@schematics/angular": "17.3.0",
     "@swc-node/register": "1.8.0",
