--- a/apps/frontend-wte/project.json
+++ b/apps/frontend-wte/project.json
@@ -51,11 +51,14 @@
           "buildTarget": "frontend-wte:build:production"
         },
         "development": {
-          "buildTarget": "frontend-wte:build:development",
-          "port": 3001
+          "buildTarget": "frontend-wte:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "apps/frontend-wte/proxy.conf.json",
+        "port": 3001
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
