--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "format:check": "yarn prettier --check \"./**/*.{js,jsx,ts,svelte,json}\"",
-    "format:write": "yarn prettier --write \"./**/*.{js,jsx,ts,svelte,json}\""
+    "format:write": "yarn prettier --write \"./**/*.{js,jsx,ts,svelte,json}\"",
+    "start:wte": "nx run-many --target=serve --projects=frontend-wte,backend-wte"
   },
   "private": true,
   "dependencies": {
