Moved string-formatters to core lib

--- a/libs/core/string-formatters/project.json
+++ b/libs/core/string-formatters/project.json
@@ -1,6 +1,6 @@
 {
   "name": "string-formatters",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "string-formatters/src",
   "projectType": "library",
   "tags": [],
