Added dockerfile, nginx config and docker-build command

--- a/apps/frontend-wte/project.json
+++ b/apps/frontend-wte/project.json
@@ -44,6 +44,10 @@
       },
       "defaultConfiguration": "production"
     },
+    "docker-build": {
+      "dependsOn": ["build:production"],
+      "command": "docker build -f apps/frontend-wte/Dockerfile . -t frontend-wte"
+    },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
