--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/platform-express": "10.0.2",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.0",
+    "stripe": "^18.0.0",
     "tslib": "2.3.0",
     "zone.js": "0.14.3"
   },
